--- a/IzvorniKod/SpotPicker/frontend/.eslintrc.json
+++ b/IzvorniKod/SpotPicker/frontend/.eslintrc.json
@@ -3,23 +3,12 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "plugin:react/recommended",
-    "standard-with-typescript",
-    "plugin:redux-saga/recommended"
-  ],
+  "extends": ["plugin:react/recommended"],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
     "project": ["./tsconfig.json"]
   },
-  "plugins": ["react", "redux-saga"],
-  "rules": {
-    "@typescript-eslint/restrict-template-expressions": [
-      "warn",
-      { "allowNumber": true }
-    ],
-    "@typescript-eslint/no-non-null-assertion": ["warn"]
-  }
+  "plugins": ["react"]
 }
