--- a/IzvorniKod/SpotPicker/SpotPicker.csproj
+++ b/IzvorniKod/SpotPicker/SpotPicker.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="IbanNet" Version="5.13.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
