--- a/IzvorniKod/SpotPicker/frontend/package.json
+++ b/IzvorniKod/SpotPicker/frontend/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5",
